<resources>
    <string name="app_name">知识 Or 成就</string>
    <string name="splash_countdown">跳过 3 秒</string>
    <string name="splash_version">版本号 1.0</string>
    <string name="splash_hint">这是一个学习·挑战·记录·总结·实现的世界!</string>
    <string name="group_next">开始学习</string>
    <string name="know_add">添加知识</string>
    <string name="know_help">帮助</string>
    <string name="content_item_title">TextView</string>
    <string name="content_item_summary">TextView的使用方法和api详解</string>
    <string name="content_item_study_title">可以不参照代码而独立编写使用TextView的api，并知道该api的效果(作用)</string>
    <string name="content_item_count">0 / 10 次</string>
    <string name="fragment_content">没有数据!您可以试着添加几条知识！</string>
    <string name="fragment_error">请求数据失败了!您可以进反馈页面反馈!</string>
    <string name="help_add_toolbar">添加帮助信息</string>
    <string name="help_add_successful_text">添加帮助成功了哦!</string>
    <string name="help_add_fail_text">添加帮助失败了哦!</string>
    <string name="help_number">10</string>
    <string name="help_title">关于有没有源码展示的页面</string>
    <string name="help_time">2020.3.7</string>
    <string name="help_error_text">搜索数据失败了!您可以在试试!</string>
    <string name="help_empty_text">没有任何一条帮助信息!您可以对官方催更!</string>
    <string name="help_text">内容:</string>
    <string name="help_summary">这是一个学习android知识的应用，它会从简单到高深，从不熟练到精通，从小应用到系统级别！</string>
    <string name="commend_edit_hint">请说出你的看法!</string>
    <string name="commend_number">评论</string>
    <string name="commend_number_text">(102)</string>
    <string name="help_poor_number">201</string>
    <string name="help_praise_number">321</string>
    <string name="commend_safa_text">还没有人发布评论!快抢了它!</string>
    <string name="commend_summary">这个评论好给力好开心啊!</string>
    <string name="commend_time">2020.3.9</string>
    <string name="update_empty">该数据请求失败了!请重试!</string>
    <string name="help_head">标题:</string>
    <string name="help_delete_successful_text">删除帮助成功了!</string>
    <string name="help_delete_fail_text">删除帮助失败了!</string>
    <string name="help_content_details_text">跳F转到帮助详情页面!</string>
    <string name="help_update_not_text">没有修改该帮助!</string>
    <string name="help_update_fail_text">修改该帮助失败了!</string>
    <string name="help_update_commend_successful_text">发表评论成功了!</string>
    <string name="help_database_error_text">获取数据库数据失败!</string>
    <string name="help_update_error_text">更新该帮助失败!请稍后再试或者联系官方!</string>
    <string name="help_update_success_text">更新该帮助成功!返回中!</string>
    <string name="help_update_original_text">该帮助没有任何修改!请考虑清楚要不要修改!</string>
    <string name="default_hint">该功能暂时未制作!请等待或上门做客!</string>
    <string name="add_know_title">知识标题:</string>
    <string name="add_know_class">设置展示的类名:</string>
    <string name="add_know_have">是否有展示</string>
    <string name="add_know_title_hint">请输入知识的标题</string>
    <string name="add_know_class_hint">请输入展示的类名</string>
    <string name="add_know_true">有</string>
    <string name="add_know_false">没有</string>
    <string name="add_know_level">知识级别:</string>
    <string name="add_know_summary">知识简要:</string>
    <string name="add_know_summary_hint">请输入知识的简单说明</string>
    <string name="add_know_master">掌握要求:</string>
    <string name="add_know_master_hint">请输入掌握的详细要求</string>
    <string name="add_know_level_text">请选择知识深度</string>
    <string name="common_default">默认级</string>
    <string name="common_first">入门级</string>
    <string name="common_second">熟悉级</string>
    <string name="common_third">熟练级</string>
    <string name="common_fourth">精通级</string>
    <string name="common_fifth">创造级</string>
    <string name="common_update_default">更新默认级数据</string>
    <string name="common_update_first">更新文章</string>
    <string name="common_update_second">更新熟悉级数据</string>
    <string name="common_update_third">更新熟练级数据</string>
    <string name="common_update_fifth">更新创造级数据</string>
    <string name="knowledge_title_edit">知识的标题</string>
    <string name="knowledge_summary_title">您所要表达的知识的简要或者背景!</string>
    <string name="knowledge_summary_edit">请在这里编辑!</string>
    <string name="knowledge_explain_title">您对该知识的感想或者要求!</string>
    <string name="knowledge_explain_edit">请在这里编辑!</string>
    <string name="article_insert_toolbar">文章型数据</string>
    <string name="article_update_toolbar">更新文章知识</string>
    <string name="article_edit_hint">你可以尽情的创作你所想的所有想法和知识,没有任何规则!</string>
    <string name="article_default">知识需要实践</string>
    <string name="article_edit_empty">不能没有任何编辑的保存!请写点什么!</string>
    <string name="common_fail">服务器没有回复!要不等等..</string>
    <string name="common_error">服务器出故障了!正在抢救中..</string>
    <string name="article_native_message">没有编辑完成的文章会保存起来,等待下次的编辑</string>
    <string name="article_native_title">是否保存本次的编辑数据!</string>
    <string name="article_query_empty">该文章可能已经被删除或者隐藏了</string>
    <string name="article_data_empty">没有该文章的数据!请重新创建!</string>
    <string name="article_update_empty">如果没有,又为何来此!</string>
    <string name="article_update_fail">更新数据失败了!要不重试下</string>
    <string name="article_update_success">更新成功了!正在退出中!开玩笑的</string>
    <string name="article_delete_fail">文章删除失败!您可以稍后尝试!</string>
    <string name="article_delete_error">服务器出现错误了!请等待!</string>
    <string name="no_text">   </string>
    <string name="book_insert_toolbar">像书一样串联</string>
    <string name="book_update_toolbar">更新书籍知识</string>
    <string name="book_success">您的操作成功了!</string>
    <string name="book_content_edit">请逐页编辑您所要所想的内容!</string>
    <string name="book_query_empty">该书籍可能已经被删除或者隐藏了</string>
    <string name="book_update_empty">没有想法,又为何不学习!</string>
    <string name="book_update_fail">更新数据失败了!要不重试下</string>
    <string name="book_update_success">更新成功了!正在退出中!开玩笑的</string>
    <string name="aided_insert_toolbar">引导型知识</string>
    <string name="aided_update_toolbar">更新辅助型知识</string>
    <string name="aided_common_directory">目录</string>
    <string name="aided_common_explain">讲解</string>
    <string name="aided_common_deep_explain">深层次讲解</string>
    <string name="aided_common_case">案例</string>
    <string name="aided_common_experience">经验</string>
    <string name="aided_common_advanced">进阶</string>
    <string name="aided_common_publicize">宣传</string>
    <string name="aided_common_hint_directory">请试着总结您所要表达的知识的目录!</string>
    <string name="aided_common_hint_explain">请试着说明目录中地所有知识的含义!</string>
    <string name="aided_common_hint_deep_explain">请试着发掘目录中地所有知识的含义!</string>
    <string name="aided_common_hint_case">请试着回想目录中所有知识会实践在哪!</string>
    <string name="aided_common_hint_experience">请试着表达实践所有知识所遇到的难关!</string>
    <string name="aided_common_hint_advanced">发挥头脑,试着为目录中所有知识找出更深的用途或含义!</string>
    <string name="aided_common_hint_publicize">你可以留下下次发布的信息!</string>
    <string name="aided_insert_empty_fail">如果没有填写完整的话是不能通过的!</string>
    <string name="aided_insert_save_error">发布辅助型知识的时候,服务器故障了!</string>
    <string name="aided_insert_save_fail">发布辅助型知识失败了!请重试!</string>
    <string name="aided_insert_save_success">发布辅助型知识成功!正在初始化以编辑下一知识!</string>
    <string name="aided_query_empty">该辅助型文章未查找到!</string>
    <string name="aided_update_success">更新辅助型数据成功了!</string>
    <string name="aided_update_empty">更新辅助型数据不能为空以及重复!</string>
    <string name="aided_update_fail">更新辅助型数据失败了!你可以稍后再试!</string>
    <string name="class_insert_toolbar">函数型知识</string>
    <string name="class_update_toolbar">更新函数数据</string>
    <string name="class_success">函数型知识添加成功了!你可以在添加了!</string>
    <string name="class_empty">函数型知识不能为空!写个0都比不写好!</string>
    <string name="knowledge_class_header_title">请填写该函数的名称!</string>
    <string name="knowledge_class_item_title">请填写该函数的子函数!</string>
    <string name="class_item_summary">说明:</string>
    <string name="class_add_title">请添加新的函数知识!</string>
    <string name="class_update_empty">函数型没有数据不能更新</string>
    <string name="feeling_insert_toolbar">感悟型知识</string>
    <string name="feeling_empty">感悟型知识不能为空,请添加更多内容!</string>
    <string name="feeling_add_title">请添加新的感悟知识!</string>
    <string name="feeling_item_summary">讲解:</string>
    <string name="insert_title">标题:</string>
    <string name="insert_hint_title">知识的标题</string>
    <string name="insert_summary">简介:</string>
    <string name="insert_hint_summary">知识的简单介绍</string>
    <string name="insert_show">示范:</string>
    <string name="insert_hint_show">知识的简单示范(使用的方法)</string>
    <string name="insert_explain">说明:</string>
    <string name="insert_hint_explain">知识的简单说明(讲解为什么要这样做)</string>
    <string name="insert_heed">注意:</string>
    <string name="insert_hint_heed">知识使用需要注意的点(使用中可能出bug的方法)</string>
    <string name="insert_experience">心得:</string>
    <string name="insert_hint_experience">知识的心得(你对该知识的理解)</string>
    <string name="insert_hint_show_first">代码的简单示范(使用的方法)</string>
    <string name="insert_explain_first">代码意义:</string>
    <string name="insert_hint_explain_first">简单说明(讲解为什么要这样做)</string>
    <string name="insert_title_first">知识的标题:</string>
    <string name="insert_hint_title_first">知识的简单描述</string>
    <string name="insert_summary_first">简单介绍:</string>
    <string name="knowledge_title">Android</string>
    <string name="knowledge_more">更多</string>
    <string name="knowledge_count_text">25个</string>
    <string name="knowledge_count_foot_text">知识输出</string>
    <string name="knowledge_quality_text">10个</string>
    <string name="knowledge_quality_foot_text">高质量</string>
    <string name="knowledge_time_text">25天</string>
    <string name="knowledge_time_foot_text">连续输出</string>
    <string name="knowledge_people_text">25个</string>
    <string name="knowledge_people_foot_text">使用人数</string>
    <string name="knowledge_level_text">3级</string>
    <string name="knowledge_level_foot_text">最高等级</string>
    <string name="knowledge_prize_text">10个</string>
    <string name="knowledge_prize_foot_text">官方奖励</string>
    <string name="challenge_title">初级天梯</string>
    <string name="challenge_more">更多</string>
    <string name="challenge_count_text">25天</string>
    <string name="challenge_count_foot_text">挑战天数</string>
    <string name="challenge_success_text">10次</string>
    <string name="challenge_success_foot_text">挑战成功</string>
    <string name="challenge_fail_text">25次</string>
    <string name="challenge_fail_foot_text">挑战失败</string>
    <string name="challenge_highest_text">25层</string>
    <string name="challenge_highest_foot_text">最高阶层</string>
    <string name="challenge_time_text">12</string>
    <string name="challenge_time_foot_text">挑战时间</string>
    <string name="challenge_number_text">10题</string>
    <string name="challenge_number_foot_text">挑战题数</string>
    <string name="challenge_difficulty_text">5级</string>
    <string name="challenge_difficulty_foot_text">挑战难度</string>
    <string name="challenge_situation_text">成</string>
    <string name="challenge_summary_text">陈公公水水水水</string>
    <string name="challenge_title_text">挑战25层天梯</string>
    <string name="challenge_serial_text">25次</string>
    <string name="level_new_text">1级</string>
    <string name="level_new_foot_text">当前等级</string>
    <string name="level_next_text">2级</string>
    <string name="level_next_foot_text">下一等级</string>
    <string name="level_experience_text">100</string>
    <string name="level_experience_foot_text">当前经验</string>
    <string name="level_next_experience_text">500</string>
    <string name="level_next_experience_foot_text">下级经验</string>
    <string name="level_rank_text">120</string>
    <string name="level_rank_foot_text">等级排名</string>
    <string name="problem_title">一级</string>
    <string name="problem_more">更多</string>
    <string name="problem_count_text">25个</string>
    <string name="problem_count_foot_text">知识输出</string>
    <string name="problem_level_text">10级</string>
    <string name="problem_level_foot_text">最高等级</string>
    <string name="problem_people_text">25人</string>
    <string name="problem_people_foot_text">使用人数</string>
    <string name="problem_use_text">25次</string>
    <string name="problem_use_foot_text">使用次数</string>
    <string name="problem_time_text">2012</string>
    <string name="problem_time_foot_text">发布时间</string>
</resources>