<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/include_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="@dimen/margin_width_10dp">
            <TextView
                style="@style/base_text_style"
                android:text="@string/aided_common_directory"
                android:layout_marginBottom="@dimen/margin_width_10dp"/>

            <EditText
                android:id="@+id/aided_update_directory"
                style="@style/base_edit_common_style"
                android:hint="@string/aided_common_hint_directory"/>

            <View
                style="@style/view_common_style"/>

            <TextView
                style="@style/base_text_style"
                android:text="@string/aided_common_explain"
                android:layout_marginBottom="@dimen/margin_width_10dp"/>

            <EditText
                android:id="@+id/aided_update_explain"
                style="@style/base_edit_common_style"
                android:hint="@string/aided_common_hint_explain"/>

            <View
                style="@style/view_common_style"/>

            <TextView
                style="@style/base_text_style"
                android:text="@string/aided_common_deep_explain"
                android:layout_marginEnd="@dimen/margin_width_10dp"/>

            <EditText
                android:id="@+id/aided_update_deep_explain"
                style="@style/base_edit_common_style"
                android:hint="@string/aided_common_hint_deep_explain"/>

            <View
                style="@style/view_common_style"/>

            <TextView
                style="@style/base_text_style"
                android:text="@string/aided_common_case"
                android:layout_marginEnd="@dimen/margin_width_10dp"/>

            <EditText
                android:id="@+id/aided_update_case"
                style="@style/base_edit_common_style"
                android:hint="@string/aided_common_hint_case"/>

            <View
                style="@style/view_common_style"/>

            <TextView
                style="@style/base_text_style"
                android:text="@string/aided_common_experience"
                android:layout_marginEnd="@dimen/margin_width_10dp"/>

            <EditText
                android:id="@+id/aided_update_experience"
                style="@style/base_edit_common_style"
                android:hint="@string/aided_common_hint_experience"/>

            <View
                style="@style/view_common_style"/>

            <TextView
                style="@style/base_text_style"
                android:text="@string/aided_common_advanced"
                android:layout_marginBottom="@dimen/margin_width_10dp"/>

            <EditText
                android:id="@+id/aided_update_advanced"
                style="@style/base_edit_common_style"
                android:hint="@string/aided_common_hint_advanced"/>

            <View
                style="@style/view_common_style"/>

            <TextView
                style="@style/base_text_style"
                android:text="@string/aided_common_publicize"
                android:layout_marginBottom="@dimen/margin_width_10dp"/>

            <EditText
                android:id="@+id/aided_update_publicize"
                style="@style/base_edit_common_style"
                android:hint="@string/aided_common_hint_publicize"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>