<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_width_10dp">
        <TextView
            android:id="@+id/challenge_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_title"
            android:textSize="@dimen/text_size_24sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/challenge_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_more"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_width_10dp">
            <LinearLayout
                style="@style/mine_data_linear_style">
                <TextView
                    android:id="@+id/challenge_count"
                    style="@style/mine_data_style"
                    android:layout_marginBottom="@dimen/margin_width_5dp"
                    android:text="@string/challenge_count_text"/>
                <TextView
                    style="@style/mine_data_style"
                    android:text="@string/challenge_count_foot_text"/>
            </LinearLayout>
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/challenge_success"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/challenge_success_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/challenge_success_foot_text"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/challenge_fail"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/challenge_fail_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/challenge_fail_foot_text"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/challenge_highest"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/challenge_highest_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/challenge_highest_foot_text"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/challenge_time"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/challenge_time_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/challenge_time_foot_text"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/challenge_number"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/challenge_number_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/challenge_number_foot_text"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/challenge_difficulty"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/challenge_difficulty_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/challenge_difficulty_foot_text"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>