<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_width_10dp">
        <TextView
            android:id="@+id/knowledge_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/knowledge_title"
            android:textSize="@dimen/text_size_24sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/knowledge_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/knowledge_more"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_width_10dp">
            <LinearLayout
                style="@style/mine_data_linear_style">
                <TextView
                    android:id="@+id/knowledge_count"
                    style="@style/mine_data_style"
                    android:layout_marginBottom="@dimen/margin_width_5dp"
                    android:text="@string/knowledge_count_text"/>
                <TextView
                    style="@style/mine_data_style"
                    android:text="@string/knowledge_count_foot_text"/>
            </LinearLayout>
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/knowledge_quality"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/knowledge_quality_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/knowledge_quality_foot_text"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/knowledge_time"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/knowledge_time_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/knowledge_time_foot_text"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/knowledge_people"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/knowledge_people_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/knowledge_people_foot_text"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/knowledge_level"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/knowledge_level_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/knowledge_level_foot_text"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/knowledge_prize"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/knowledge_prize_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/knowledge_prize_foot_text"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>