<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_width_10dp">
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/level_new"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/level_new_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/level_new_foot_text"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/level_next"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/level_next_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/level_next_foot_text"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/level_experience"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/level_experience_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/level_experience_foot_text"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/level_next_experience"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/level_next_experience_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/level_next_experience_foot_text"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mine_data_linear_style">
            <TextView
                android:id="@+id/level_rank"
                style="@style/mine_data_style"
                android:layout_marginBottom="@dimen/margin_width_5dp"
                android:text="@string/level_rank_text"/>
            <TextView
                style="@style/mine_data_style"
                android:text="@string/level_rank_foot_text"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>