<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_width_10dp">
    <TextView
        android:id="@+id/challenge_serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_serial_text"
        android:textSize="@dimen/text_size_24sp"
        android:textColor="@color/black"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/challenge_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_title_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_24sp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/challenge_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_summary_text"
        android:textSize="@dimen/text_size_24sp"
        android:textColor="@color/black"
        android:layout_below="@+id/challenge_title"
        android:layout_marginBottom="@dimen/margin_width_10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|center"
        android:orientation="horizontal"
        android:layout_below="@+id/challenge_summary">
        <TextView
            android:id="@+id/challenge_situation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_situation_text"
            android:textSize="@dimen/text_size_24sp"
            android:textColor="@color/black"
            android:layout_marginRight="@dimen/margin_width_5dp"/>
        <TextView
            android:id="@+id/challenge_highest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_highest_text"
            android:textSize="@dimen/text_size_24sp"
            android:textColor="@color/black"
            android:layout_marginRight="@dimen/margin_width_5dp"/>
        <TextView
            android:id="@+id/challenge_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_time_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24sp"/>
    </LinearLayout>

</RelativeLayout>